# mmteb-wiki

./: .env.example  README.md  pyproject.toml
mmteb_wiki/: chunk_wiki.py  cohere_wiki.ipynb  config.py  correlation_study.ipynb  correlation_study.py  download_cohere.py  filter_wiki.ipynb  hard_negatives.ipynb  hard_negatives_wiki.ipynb  hf_2k.py  hf_top100k copy.py  hf_top100k.py  page_views.ipynb  page_views.py  page_views_per_month.py  plots.ipynb  prep_wiki.py  reranking.ipynb  sum_page_views.py  utils.py  wikipedia_de.ipynb
results/germanrag-positives/mrr/: deepset_gbert-large.csv  deutsche-telekom_gbert-large-paraphrase-cosine.csv  intfloat_multilingual-e5-base.csv  intfloat_multilingual-e5-large.csv  intfloat_multilingual-e5-small.csv  jinaai_jina-embeddings-v2-base-de.csv  mixedbread-ai_mxbai-embed-large-v1.csv  thenlper_gte-base.csv  thenlper_gte-large.csv  thenlper_gte-small.csv
results/germanrag-positives/retrieval/: retrieval_results_deepset_gbert-large.pkl  retrieval_results_deutsche-telekom_gbert-large-paraphrase-cosine.pkl  retrieval_results_intfloat_multilingual-e5-base.pkl  retrieval_results_intfloat_multilingual-e5-large.pkl  retrieval_results_intfloat_multilingual-e5-small.pkl  retrieval_results_jinaai_jina-embeddings-v2-base-de.pkl  retrieval_results_mixedbread-ai_mxbai-embed-large-v1.pkl  retrieval_results_thenlper_gte-base.pkl  retrieval_results_thenlper_gte-large.pkl  retrieval_results_thenlper_gte-small.pkl
