[tool.poetry]
name = "mmteb-wiki"
version = "0.1.0"
description = ""
authors = ["rasdani <73563550+rasdani@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
datasets = "^2.18.0"
llama-index = "^0.10.29"
matplotlib = "^3.8.4"
pandas = "^2.2.2"
pip = "^24.0"
ipykernel = "^6.29.4"
python-dotenv = "^1.0.1"
transformers = "^4.39.3"
spacy = "^3.7.4"
llama-index-embeddings-huggingface = "^0.2.0"
numpy = "^1.26.4"
scipy = "^1.13.0"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
black = "^24.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
